--- a/src/style.css
+++ b/src/style.css
@@ -165,6 +165,7 @@
   font-size: 65%;
   
   &:first-child{ margin-top: 10px }
+  &:last-child{ margin-bottom: 10px }
   & div:not(.column){
     display: flex;
     align-items: center;
