--- a/src/style.css
+++ b/src/style.css
@@ -50,9 +50,9 @@
 .menuContainer{
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 2vw;
   & .row{
-    gap: 10px;
+    gap: 2vw;
     justify-content: center;
   }
   & input[type="number"]{
@@ -71,10 +71,13 @@
 }
 
 .menuBtn{
-  width: 180px;
+  width: 41.5vw;
+  padding: 10px;
+  transition: 300ms;
   display: flex;
   justify-content: center;
   align-items: center;
+
   & img{
     height: 30px;
     user-select: none;
@@ -82,14 +85,13 @@
 }
 
 #createClick{
-  padding: 10px;
   border: 1px solid black;
   border-radius: 10px;
   font-size: 100%;
   color: var(--white);
   background-color: black;
   cursor: pointer;
-  transition: 300ms;
+
   &:hover{
     transform: scale(1.02);
   }
@@ -104,7 +106,6 @@
 }
 
 #playClick{
-  padding: 10px;
   background-color: transparent;
   border: 1px solid black;
   border-radius: 10px;
@@ -113,7 +114,7 @@
   align-items: center;
   gap: 10px;
   cursor: pointer;
-  transition: 300ms;
+  
   &:hover{
     transform: scale(1.02);
   }
@@ -126,35 +127,68 @@
     color: var(--white);
   }
 }
+.manageClickContainer{
+  width: 85vw;
+  background-color: black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 10px;
 
+  & #deleteAllClick{
+    width: 27%;
+    height: 5vh;
+    margin-left: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 700;
+    font-size: 2.5vw;
+    color: var(--white);
+    background-color: transparent;
+    border: none;
+    user-select: none;
+
+    transition: opacity 300ms;
+    cursor: pointer;
+    &:hover{ opacity: 0.7 }
+  }
+  & img{
+    width: 4vh;
+  }
+}
 .clickContainer{
-  width: 80%;
+  width: 100%;
   height: 50vh;
   border: 1px solid black;
+  background-color: var(--white);
   gap: 10px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow-y: scroll;
   overflow-x: hidden;
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
 
   scrollbar-color: black transparent;
   scrollbar-width: 10%;
 
+  & p{ font-weight: 500 }
   &:empty{
     &::before{
-      width: 72%;
+      width: 77%;
+      margin-top: 10px;
       text-align: center;
       font-weight: 700;
-      content: 'click on the "Create new click" button or press the "c" key to add a key mouse position';
+      content: 'Click on the "Create new click" button or press the "c" key to add a key mouse position';
     }
   }
   &::-webkit-scrollbar-track-piece{ border-radius: 10px }
 }
 
 .clickItem{
-  width: 80%;
+  width: 90%;
   padding: 10px;
   background-color: black;
   display: flex;
